將all.js路徑改為相對路徑

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
           </div>
         </div>
       </div>
-      <script src="/all.js"></script>
+      <script src="./all.js"></script>
 </body>
 </html>
